Complete images handling flow and implement testing